--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <%# <nav class="navbar myNavbar py-3 navbar-expand fixed-top navbar-dark "> <%# .py-3 class is to slightly increase navbar height %>
-<nav class="navbar myNavbar py-3 navbar-expand fixed-top stroke"> <%# .py-3 class is to slightly increase navbar height %>
+<nav class="navbar myNavbar py-3 navbar-expand fixed-top text-center stroke"> <%# .py-3 class is to slightly increase navbar height %>
   <div class="container">
     <a class="navbar-brand" href="/">Verble</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
