re-edit .csv file for seeds, style flashcard buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,9 @@
 // Alerts
 @import "components/alert";
 
+// Effects
+@import "shared/stroke_effect";
+
 // Custom CSS to customise Bootstrap:
 @import "custom";
 
