--- a/app/views/user_decks/show.html.erb
+++ b/app/views/user_decks/show.html.erb
@@ -66,7 +66,7 @@
             <% else %>
               <% if user_deck_flashcard.learnt %>
                 <% if user_deck_flashcard.next_review.nil? %>
-                  <tr>
+                  <tr class="table-light">
                 <% else %>
                   <% if user_deck_flashcard.next_review.past? %>
                     <tr class="table-warning">
@@ -76,7 +76,7 @@
                 <% end %>
               <% else %>
                 <% if user_deck_flashcard.due_to_learn.nil? %>
-                  <tr>
+                  <tr class="table-light">
                 <% else %>
                   <% if user_deck_flashcard.due_to_learn.past? %>
                     <tr class="table-danger">
@@ -126,8 +126,21 @@
               </td>
             </tr>
           <% end %>
-          <%= form.submit "Ignore selected", ignore_option: 'ignore selected', class: "btn btn-primary" %>
-          <%= submit_tag "Ignore page", ignore_option: 'ignore page', class: "btn btn-primary" %>
+          <div class="input-group mb-3">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+          </div>
+          <div class="row">
+            <%= form.submit "Ignore selected", ignore_option: 'ignore selected', class: "btn btn-primary w-25" %>
+            <%= submit_tag "Ignore page", ignore_option: 'ignore page', class: "btn btn-primary w-25" %>
+            <%= submit_tag "Ignore up to last selected card", ignore_option: 'ignore up to last selected card', class: "btn btn-primary w-25" %>
+          </div>
         <% end %>
     </tbody>
   <% end %>
