make incorrect button in learn view make next_review shorter timeframe

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -92,6 +92,7 @@ nav .navbar-nav li a, .navbar-brand {
 
   // background: #3454D1;
   background: rgba(52, 84, 209, 0);
+  // background: white;
 
   // color: $gray;
   // font-size: 30px;
