--- a/app/views/components/_get_learning_schedule_modal.html.erb
+++ b/app/views/components/_get_learning_schedule_modal.html.erb
@@ -15,7 +15,7 @@
         <p class="card-text">
           <% unless user_deck.to_learn_per_day.nil? %>
             <% if user_deck.to_learn_per_day > 0 %>
-              Time to complete deck: <%= user_deck_flashcards.count / user_deck.to_learn_per_day %> days
+              Time to complete deck: <%= user_deck_flashcards_to_learn_count / user_deck.to_learn_per_day %> days
             <% end %>
           <% end %>
         </p>
