add review progress bar to user_decks#review page

--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -98,7 +98,7 @@
       <% if learn_or_review == 'learn' %>
       <%# <div class="d-grid gap-2"> %>
         <%= link_to "Incorrect", update_learn_user_flashcard_path(@top_user_flashcard, answer_correct: false), class: "btn btn-danger btn-lg w-50", method: :patch %>
-        <%= link_to "Correct", update_learn_user_flashcard_path(@top_user_flashcard, answer_correct: true), class: "btn btn-success btn-lg w-50", method: :patch %>
+        <%= link_to "Correct", update_learn_user_flashcard_path(@top_user_flashcard, answer_correct: true), class: "btn btn-success btn-lg w-50", method: :patch, accesskey: 'R' %>
       <% elsif learn_or_review == 'review' %>
         <%= link_to "Incorrect", update_review_user_flashcard_path(@top_user_flashcard, answer_correct: false), class: "btn btn-danger btn-lg w-50", method: :patch %>
         <%= link_to "Correct", update_review_user_flashcard_path(@top_user_flashcard, answer_correct: true), class: "btn btn-success btn-lg w-50", method: :patch %>
