--- a/app/views/components/_today_learn_progress_bar.html.erb
+++ b/app/views/components/_today_learn_progress_bar.html.erb
@@ -9,7 +9,7 @@
 
 <div class="progress" id="today-learn-progress-bar">
   <% if today_learn_progress_percentage == 100 %>
-    <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+    <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="<%= learnt_today_count %> / <%= total_learn_today_count %>" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
   <% else %>
     <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" data-bs-toggle="popover" data-bs-trigger="focus" title="<%= learnt_today_count %> / <%= total_learn_today_count %>" data-bs-content="And here's some amazing content. It's very engaging. Right?"></div>
   <% end %>
