--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -12,10 +12,7 @@
 
 <% to_learn_today_count = user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ? AND ignore = ?", user_deck.id, nil, DateTime.now.utc.end_of_day, false).count %>
 
-<% user_deck_flashcards_to_review_count = user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ? AND ignore = ?", user_deck.id, nil, DateTime.now.utc.end_of_day, false).count %>
-<% reviewed_today_count = user_flashcards.where("user_deck_id = ? AND previous_review > ? AND previous_review <= ? AND ignore = ?", user_deck.id, DateTime.now.utc.beginning_of_day, DateTime.now.utc.end_of_day, false).count %>
 <% to_review_today_count = user_flashcards.where("user_deck_id = ? AND next_review <= ? AND ignore = ?", user_deck.id, DateTime.now.utc.end_of_day, false).count %>
-<% total_review_today_count = reviewed_today_count + to_review_today_count %>
 
 <%= render 'components/get_learning_schedule_modal', user_deck: user_deck, user_deck_flashcards_to_learn_count: user_deck_flashcards_to_learn_count %>
 
@@ -115,22 +112,9 @@
               <%# Daily review progress bar %>
               Daily review goal:
 
-              <%= reviewed_today_count %> / <%= total_review_today_count %>
+              <%= render 'components/today_review_progress_bar', user_deck: user_deck, user_flashcards: user_flashcards %>
 
-              <% if reviewed_today_count > 0 && total_review_today_count > 0 %>
-                <% today_review_progress_percentage = reviewed_today_count.to_f / total_review_today_count.to_f * 100 %>
-              <% else %>
-                <% today_review_progress_percentage = 0 %>
-              <% end %>
-              <div class="progress">
-                <% if today_review_progress_percentage == 100 %>
-                  <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-                <% else %>
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-                <% end %>
-              </div>
             </div>
-
           </li>
         </ul>
 
