--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -8,71 +8,81 @@
 
       <%= link_to("Ignore card", :controller => "user_decks", :action => "ignore_card", :user_deck_flashcard_id => @top_flashcard.id, method: :post, class: "btn btn-secondary shadow") %>
 
+      <ul class="list-group list-group-flush">
       <%# <ul class="list-group list-group-flush"> %>
-      <div class="row">
+        <li class="list-group-item">
+          <div class="row">
 
-        <%# <li class="list-group-item"> %>
-        <div class="col">
+            <%# <li class="list-group-item"> %>
+            <div class="col">
 
-          <% if @top_flashcard.test_direction == 'tl-en' %>
-            <p class="text-muted"><%= @top_flashcard.deck.language %></p>
-          <% else %>
-            <p class="text-muted">English</p>
-          <% end %>
+              <% if @top_flashcard.test_direction == 'tl-en' %>
+                <p class="text-muted"><%= @top_flashcard.deck.language %></p>
+              <% else %>
+                <p class="text-muted">English</p>
+              <% end %>
 
-          <h5 class="card-title"><%= @top_flashcard.question %></h5>
-          <i class="fa-solid fa-volume-high"></i>
-          <% if @top_flashcard.test_direction == 'tl-en' %>
-            <p class="card-text"><%= sanitize @top_flashcard.term_with_accent %></p>
-            <p class="card-text"><%= sanitize @top_flashcard.conjugation_and_declension_info %></p>
-          <% end %>
+              <h5 class="card-title"><%= @top_flashcard.question %></h5>
+              <i class="fa-solid fa-volume-high"></i>
+              <% if @top_flashcard.test_direction == 'tl-en' %>
+                <p class="card-text"><%= sanitize @top_flashcard.term_with_accent %></p>
+                <p class="card-text"><%= sanitize @top_flashcard.conjugation_and_declension_info %></p>
+              <% end %>
 
-        <%# </li> %>
-        </div>
+            <%# </li> %>
+            </div>
 
-        <%# <li class="list-group-item"> %>
-        <div class="col">
+            <%# <li class="list-group-item"> %>
+            <div class="col">
 
-          <% if @top_flashcard.test_direction == 'tl-en' %>
-            <p class="text-muted">English</p>
-          <% else %>
-            <p class="text-muted"><%= @top_flashcard.deck.language %></p>
-          <% end %>
+              <% if @top_flashcard.test_direction == 'tl-en' %>
+                <p class="text-muted">English</p>
+              <% else %>
+                <p class="text-muted"><%= @top_flashcard.deck.language %></p>
+              <% end %>
 
-          <div class="collapse" id="collapseExample">
-            <h5 class="card-title"><%= @top_flashcard.answer %></h5>
-            <i class="fa-solid fa-volume-high"></i>
-            <% if @top_flashcard.test_direction == 'en-tl' %>
-              <p class="card-text"><%= sanitize @top_flashcard.term_with_accent %></p>
-              <p class="card-text"><%= sanitize @top_flashcard.conjugation_and_declension_info %></p>
-            <% end %>
+              <div class="collapse" id="collapseExample">
+                <h5 class="card-title"><%= @top_flashcard.answer %></h5>
+                <i class="fa-solid fa-volume-high"></i>
+                <% if @top_flashcard.test_direction == 'en-tl' %>
+                  <p class="card-text"><%= sanitize @top_flashcard.term_with_accent %></p>
+                  <p class="card-text"><%= sanitize @top_flashcard.conjugation_and_declension_info %></p>
+                <% end %>
+              </div>
+
+            <%# </li> %>
+            </div>
           </div>
 
-        <%# </li> %>
-        </div>
-      </div>
+        </li>
 
-      <div class="row">
+        <li class="list-group-item">
 
-        <div class="col">
-          <% if @top_flashcard.test_direction == 'tl-en' %>
-            <p class="card-text fst-italic"><%= sanitize @top_flashcard.source_sentence %></p>
-          <% else %>
-            <p class="card-text fst-italic"><%= sanitize @top_flashcard.target_sentence %></p>
-          <% end %>
-        </div>
+          <div class="row">
 
-        <div class="col">
-          <div class="collapse" id="collapseExample">
-            <% if @top_flashcard.test_direction == 'tl-en' %>
-              <p class="card-text fst-italic"><%= sanitize @top_flashcard.target_sentence %></p>
-            <% else %>
-              <p class="card-text fst-italic"><%= sanitize @top_flashcard.source_sentence %></p>
-            <% end %>
+            <div class="col">
+              <% if @top_flashcard.test_direction == 'tl-en' %>
+                <p class="card-text fst-italic"><%= sanitize @top_flashcard.source_sentence %></p>
+              <% else %>
+                <p class="card-text fst-italic"><%= sanitize @top_flashcard.target_sentence %></p>
+              <% end %>
+            </div>
+
+            <div class="col">
+              <div class="collapse" id="collapseExample">
+                <% if @top_flashcard.test_direction == 'tl-en' %>
+                  <p class="card-text fst-italic"><%= sanitize @top_flashcard.target_sentence %></p>
+                <% else %>
+                  <p class="card-text fst-italic"><%= sanitize @top_flashcard.source_sentence %></p>
+                <% end %>
+              </div>
+            </div>
+
           </div>
-        </div>
 
-      </div>
+        </li>
+
+      </ul>
 
     </div>
 
