--- a/app/views/user_decks/show.html.erb
+++ b/app/views/user_decks/show.html.erb
@@ -127,7 +127,7 @@
               </td>
             </tr>
           <% end %>
-          <div class="input-group mb-3">
+          <div class="input-group mb-3 justify-content-center">
             <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Ignore cards</button>
             <ul class="dropdown-menu">
               <%# <li><hr class="dropdown-divider"></li> %>
@@ -142,11 +142,11 @@
               </li>
             </ul>
           </div>
-          <div class="row">
+          <%# <div class="row">
             <%#= form.submit "Ignore selected", ignore_option: 'ignore selected', class: "btn btn-primary w-25" %>
             <%#= submit_tag "Ignore page", ignore_option: 'ignore page', class: "btn btn-primary w-25" %>
             <%#= submit_tag "Ignore up to last selected card", ignore_option: 'ignore up to last selected card', class: "btn btn-primary w-25" %>
-          </div>
+          <%# </div> %>
         <% end %>
     </tbody>
   <% end %>
