--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -114,6 +114,11 @@ nav .navbar-nav li a, .navbar-brand {
   color: #FFBF00 !important;
 }
 
+.nav-link {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+
 footer {
   // background: #3454D1;
   background: rgba(52, 84, 209, 1);
