--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,11 +46,11 @@
       <%# <p class="alert"><%= alert %><%# </p> %>
 
       <div id="background-circle-1">
-        <%= show_svg('circle_yellow.svg') %>
+        <%#= show_svg('circle_yellow.svg') %>
       </div>
 
       <div id="background-circle-2">
-        <%= show_svg('circle_pink.svg') %>
+        <%#= show_svg('circle_pink.svg') %>
       </div>
 
       <div id="background-svg">
