--- a/app/views/components/_deck_card.html.erb
+++ b/app/views/components/_deck_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card m-3 shadow bg-light deck_card" style="">
+<div class="card m-3 deck_card" style="">
   <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img img-fluid rounded deck_card_img", style: "height:200px;object-fit:cover;" %>
   <div class="card-body">
     <h3 class="card-title"><%= deck.name %></h3>
@@ -7,11 +7,11 @@
     <% else %>
       <p class="card-text"><%= deck_flashcards_count %> cards</p>
     <% end %>
-    <p class="card-text">Last updated 3 mins ago</p>
-    <%= link_to "View", deck_path(deck.id), method: :get, class: 'btn btn-lg btn-primary' %>
+    <%# <p class="card-text">Last updated 3 mins ago</p> %>
+    <%= link_to "View", deck_path(deck.id), method: :get, class: 'btn btn-primary' %>
     <% if user_signed_in? %>
       <% unless user_deck_ids.include? deck.id %>
-        <%= link_to "Add", user_decks_path(deck_id: deck.id), method: :post, class: 'btn btn-lg btn-success' %>
+        <%= link_to "Add", user_decks_path(deck_id: deck.id), method: :post, class: 'btn btn-success' %>
       <% end %>
     <% end %>
   </div>
