--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -18,12 +18,12 @@
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
-<div class="card shadow m-3 user_deck_card">
+<div class="card m-3 user_deck_card">
 <%# <div class="card m-3 user_deck_card"> %>
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
-      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top img-fluid rounded-start user_deck_card_img", style: "height: 333px;object-fit:cover;" %>
+      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top img-fluid rounded-start user_deck_card_img" %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -33,7 +33,7 @@
           <li class="list-group-item">
 
             <%= link_to user_deck_path(user_deck.id, section: 0), method: :get, class: 'card-title text-dark text-decoration-none' do %>
-              <h3><%= deck.name %></h3>
+              <h1><%= deck.name %></h1>
             <% end %>
 
             <% if user_deck_flashcards_count == 1 %>
@@ -48,7 +48,6 @@
 
             <div id="user_deck_card_dropdown" class="dropdown" style="z-index: 1;">
               <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" style="z-index: 1;">
-                Options
               </button>
               <ul class="dropdown-menu dropdown-menu-end text-end" aria-labelledby="dropdownMenu2">
                 <li><%= link_to "View cards", user_deck_path(user_deck.id, section: 0), method: :get, class: "dropdown-item" %></li>
@@ -72,10 +71,10 @@
           <li class="list-group-item d-flex flex-column">
 
             <div class="mb-1">
-              Deck progress:
+              <%# Deck progress: %>
               <%# <%= user_deck_flashcards_learnt_count / user_deck_flashcards_count * 100 %>
               <%# <%= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100  %>
-              <%= user_deck_flashcards_learnt_count + user_deck_flashcards_ignored_count %> / <%= user_deck_flashcards_count %>
+              <%#= user_deck_flashcards_learnt_count + user_deck_flashcards_ignored_count %> <%# / %> <%#= user_deck_flashcards_count %>
 
               <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
                 <% deck_progress_percentage = (user_deck_flashcards_learnt_count.to_f + user_deck_flashcards_ignored_count.to_f) / user_deck_flashcards_count.to_f * 100 %>
@@ -95,7 +94,7 @@
             </div>
 
             <div class="mb-1">
-              Daily learning goal:
+              <%# Daily learning goal: %>
               <%# learnt_today_count = user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
               <%#= learnt_today_count %>
               <%# to_learn_today_count = user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ? AND ignore = ?", user_deck.id, nil, Time.now.to_date.midnight, false).count %>
@@ -110,7 +109,7 @@
 
             <div class="mb-1">
               <%# Daily review progress bar %>
-              Daily review goal:
+              <%# Daily review goal: %>
 
               <%= render 'components/today_review_progress_bar', user_deck: user_deck, user_flashcards: user_flashcards %>
 
@@ -130,6 +129,7 @@
 
             <%# <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
             <%= link_to user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', class: "btn btn-warning", style: "width:49%;z-index: 1;" do %>
+              <i class="fa-brands fa-leanpub"></i>
               Learn <%= content_tag :span, to_learn_today_count, class: 'badge bg-dark' %>
             <% end %>
             <%# <button type="button" class="btn btn-warning">Learn</button> %>
@@ -138,10 +138,12 @@
             <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
             <% if to_review_today_count > 0 %>
               <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger', style: "width:49%;z-index: 1;", data: {toggle: :tab} do %>
+                <i class="fa-solid fa-rotate-right"></i>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% else %>
               <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger disabled', style: "width:49%;z-index: 1;", data: {toggle: :tab} do %>
+                <i class="fa-solid fa-rotate-right"></i>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% end %>
