--- a/app/assets/stylesheets/components/_user_deck_card.scss
+++ b/app/assets/stylesheets/components/_user_deck_card.scss
@@ -2,19 +2,20 @@
 
 .user_deck_card {
   position: relative; // so the delete icon can have position:absolute and go in the top right of the user deck card
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .user_deck_card:hover {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
   rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  transition: 0.5s;
+  transition: 0.2s;
   // transition-property: box-shadow;
+  box-shadow: -1rem 1rem #ccc;
 }
 
 .user_deck_card_img {
-  border-radius: 50%;
-  height: 276px !important;
+  // border-radius: 50%;
+  height: 313px !important;
   object-fit:cover;
 }
 
