--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,7 +3,7 @@
 // Option A: Include all of Bootstrap
 
 // @import "node_modules/bootstrap/scss/bootstrap"; // file not found
-@import "bootstrap/scss/bootstrap";
+// @import "bootstrap/scss/bootstrap";
 
 $theme-colors: (
   "primary": #ff4136,
@@ -12,7 +12,7 @@ $theme-colors: (
 
 // Bootstrap and its default variables
 // @import "node_modules/bootstrap/scss/bootstrap";
-@import "bootstrap/scss/bootstrap";
+// @import "bootstrap/scss/bootstrap";
 
 // Set color scheme
 // $green: #197278;
